--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body {
 	/* ? Background Gradient */
 	background: rgb(123,223,217);
 	background: radial-gradient(circle, rgba(123,223,217,1) 0%, rgba(22,203,138,1) 32%, rgba(245,130,130,1) 100%);
+	background-attachment: fixed;
 } 
 
 code {
