Added Mobile CSS

--- a/src/components/FaceDetection/FaceDetection.css
+++ b/src/components/FaceDetection/FaceDetection.css
@@ -7,3 +7,13 @@
     cursor: pointer;
     z-index: 1;
 }
+
+@media screen and (max-width: 420px) {
+    .FaceDetection .image-container {
+        width: 100vw;
+    }
+
+    .FaceDetection .image-container img {
+        width: 98%;
+    }
+}
