--- a/src/components/ImageLinkForm/ImageLinkForm.css
+++ b/src/components/ImageLinkForm/ImageLinkForm.css
@@ -17,3 +17,32 @@
     border: 1px solid rgb(253, 208, 208);
     margin: 0 0 0 5px;
 }
+
+@media screen and (max-width: 420px) {
+    .ImageLinkForm .prompt {
+        font-size: 16px;
+        margin: 20px 10px;
+    }
+
+    .ImageLinkForm .form-container {
+        margin: 20px 10px;
+    }
+
+    .ImageLinkForm .form {
+        display: flex;
+        flex-flow: column wrap;
+        justify-content: center;
+        align-items: center;
+        padding: 16px;
+    }
+
+    .ImageLinkForm .form input {
+        width:100%;
+    }
+
+    .ImageLinkForm .form .detect-btn {
+        width: 96%;
+        margin: 10px 0 0 0;
+        text-align: center;
+    }
+}
